website_seo_settings: [FIX] overflow on product item name and description

--- a/website_seo_settings/static/scss/website_sale_responsive.scss
+++ b/website_seo_settings/static/scss/website_sale_responsive.scss
@@ -41,6 +41,7 @@
                 & .oe_product_name, .oe_subdescription {
                     max-height: 35px;
                     min-height: 35px;
+                    overflow: hidden;
                 }
                 & .product_price, .oe_sku {
                     min-height: 20px;
